--- a/HomeTask/battleships/battleships.csproj
+++ b/HomeTask/battleships/battleships.csproj
@@ -52,7 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ai.cs" />
+    <Compile Include="AiFactory.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="GameFactory.cs" />
     <Compile Include="GameVisualizer.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="MapGenerator.cs" />
